[package]
name = "aoc2020"
version = "1.0.0"
authors = ["Mathias Staricka <mstaricka@gmail.com>"]
edition = "2018"
readme = "README.txt"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
regex = "1.4.2"
simple_logger = "1.11.0"
